fixed change category button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:700|Amatic+SC:700" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="sweet-alert.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  
+
   <script src="sweet-alert.min.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -26,7 +26,7 @@
       <button id="creatures" class="btn btn-primary">Creatures</button>
       <button id="more" class="btn btn-primary">More!!!</button>
       <br><br>
-      <button id="changeCategroy" class="cats classname btn btn-primary">Change Category</button>
+      <button id="changeCategory" class="cats classname btn btn-primary">Change Category</button>
 
       <h3 id="categoryHeader">The category is: <span id="category"></span></h3>
 
