updated spacing issue

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       <button id="letter" class="btn btn-primary">x</button>
       <button id="letter" class="btn btn-primary">y</button>
       <button id="letter" class="btn btn-primary">z</button>
+      <button id="letter" class="btn btn-primary">-</button>
+
       <br><br>
       <canvas id="canvas" width="200px" height="300px"></canvas>
     </div>
