no more change category button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button id="creatures" class="btn btn-primary">Creatures</button>
       <button id="more" class="btn btn-primary">More!!!</button>
       <br><br>
-      <button id="changeCategory" class="cats classname btn btn-primary">Change Category</button>
+      <!-- <button id="changeCategory" class="cats classname btn btn-primary">Change Category</button> -->
 
       <h3 id="categoryHeader">The category is: <span id="category"></span></h3>
 
